<resources>
    <string name="app_name">Find My Friends</string>
    <string name="google_maps_key">AIzaSyCSiCd1AnAHt6aPEM18-dY8mG1gbwCuE3A</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Map Overview</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!-- Add  Group String resources -->
    <string name="Profile_photo_content_descriptionAG">a profile photo of yourself</string>
    <string name="Add_title_suggestionAG">Add a title</string>
    <string name="date_prompt_AG">Date</string>
    <string name="time_prompt_AG">Time</string>
    <string name="addLocationTextAG">Set location</string>
    <string name="createGroupTextAG">Create group</string>
    <string name="dataAndTimeStringAG">Date &amp; Time</string>
    <string name="locationStringAG">Location</string>
    <string name="desc_titleAG">Description</string>
    <string name="desc_suggestionAG">Enter the description of the event here</string>
    <string name="groupPhotoDescriptionAG">The designated photo for the group</string>


    <!--Nav Draw String resources-->
    <string name="menu_current_groups">CURRENT GROUPS</string>
    <string name="menu_my_groups">MY GROUPS</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_search">SEARCH</string>
    <string name="menu_group_requests">GROUP REQUESTS</string>
    <string name="menu_map_overview">MAP OVERVIEW</string>


    <!-- Login String resources-->
    <string name="Reg_string_title">Registration Page</string>
    <string name="Password_String">Password</string>
    <string name="Username_string">Username</string>
    <string name="Username_suggestion_string">Username</string>
    <string name="Password_confirmation_string">Confirm Password</string>
    <string name="Already_registered_string">Already a Registered user? Click here to log in</string>
    <string name="Back_string">Back</string>
    <string name="Log_in_string">Log in</string>
    <string name="Password_hint_string">Password</string>
    <string name="Confrim_password_string">Confirm Password</string>
    <string name="Login_page_string">Find My Friends</string>
    <string name="Register_button_string">Sign Up</string>
    <string name="Email_string">Email</string>
    <string name="Confirm_email_string">Confirm Email</string>
    <string name="email_suggestion_string">Enter email address here</string>
    <string name="confirm_email_suggestion_string">Confirm email address</string>
    <string name="Register_string">Register</string>
    <string name="authentication_string">Authentication was a success</string>
    <string name="logout_button_string">Log out?</string>
    <string name="Profile_photo_content_description">a profile photo of yourself</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_overview_title">Map Overview</string>
    <string name="title_activity_group_details">GroupDetailsActivity</string>
    <string name="default_group_name">Pre-Drinks</string>
    <string name="group_details_request_join">Request to join</string>
    <string name="group_details_group_photo_desc">An image for the selected group</string>
    <string name="group_details_map_title">Map overview</string>
    <string name="group_details_date_time_title"><![CDATA[Date & Time]]></string>
    <string name="group_details_default_date">17/07/2020</string>
    <string name="group_details_time_default">19:00</string>
    <string name="group_details_location_title">Location</string>
    <string name="group_details_location_text_field_default">332 Seal Street, Liverpool</string>
    <string name="group_details_desc_default">Pre-drinks Bring your own stuff, dont set fire to the cat and dont throw up on the couch again. \n    no human Jenga! we dont want a repeat of last time</string>
    <string name="group_details_desc_title">Description</string>
    <string name="title_activity_set_location">Map</string>


    <string name="set_location_button_Text">Set Location</string>
    <string name="title_activity_search_groups">SearchGroupsActivity</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="DistanceTitleSG">Distance</string>
    <string name="DateTimeSG">Date &amp; Time</string>
    <string name="date_filter_default_textSG">any date</string>
    <string name="time_filter_default_textSG">any time</string>
    <string name="group_details_members_title">Current Members</string>
    <string name="user_card_view_display_name">Harold Carter</string>
    <string name="user_card_view_email_address">HaroldCodyCarter@gmail.com</string>
    <string name="cardview_my_group_button_text">Edit</string>
    <string name="cardview_group_requests_view_requestsBTN">View Requests</string>


    <string name="message_no_requests_ever">Wait for your first request</string>>
    <string name="message_no_new_requests">No new group requests</string>>

</resources>
