<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/svg_map_white"
            android:title="@string/menu_map_overview" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/svg_location_white"
            android:title="@string/menu_current_groups" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/svg_location_white"
            android:title="@string/menu_my_groups" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/svg_settings_white"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/svg_person_black"
            android:title="@string/menu_group_requests" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />
    </group>


</menu>
