<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map_overview">

    <fragment
        android:id="@+id/nav_map_overview"
        android:name="com.example.find_my_friends.ui.map_overview.MapOverviewFragment"
        android:label="@string/menu_map_overview"
        tools:layout="@layout/fragment_map_overview" />

    <fragment
        android:id="@+id/nav_current_groups"
        android:name="com.example.find_my_friends.ui.current_groups.CurrentGroupsFragment"
        android:label="@string/menu_current_groups"
        tools:layout="@layout/fragment_current_groups" />


    <fragment
        android:id="@+id/nav_my_groups"
        android:name="com.example.find_my_friends.ui.my_groups.MyGroupsFragment"
        android:label="@string/menu_my_groups"
        tools:layout="@layout/fragment_my_groups" />

    <fragment
        android:id="@+id/nav_group_requests"
        android:name="com.example.find_my_friends.ui.group_requests.GroupRequestsFragment"
        android:label="@string/menu_group_requests"
        tools:layout="@layout/fragment_group_requests" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.find_my_friends.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>