<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GroupDetailsActivity"
    android:background="@color/LightGray"
    tools:showIn="@layout/activity_group_details">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_details_content_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:elevation="6dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/group_details_time_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/svg_date_primary"
                android:fontFamily="@font/roboto"
                android:text="@string/group_details_date_time_title"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/group_details_date_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/dsg_square_entry_box_border"
                android:fontFamily="@font/roboto"
                android:padding="5dp"
                android:text="@string/group_details_default_date"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/divider"
                app:layout_constraintStart_toEndOf="@+id/group_details_time_date_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/group_details_time_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/dsg_square_entry_box_border"
                android:fontFamily="@font/roboto"
                android:padding="5dp"
                android:text="@string/group_details_time_default"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/divider"
                app:layout_constraintStart_toEndOf="@+id/group_details_date_field"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_details_time_date_title" />

            <TextView
                android:id="@+id/group_details_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/svg_location_primary"
                android:fontFamily="@font/roboto"
                android:text="@string/group_details_location_title"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/group_details_location_text_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/group_details_location_text_field_default"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/divider2"
                app:layout_constraintStart_toEndOf="@+id/group_details_location_title"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_details_location_title" />

            <TextView
                android:id="@+id/group_details_desc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/svg_import_contacts_primary"
                android:fontFamily="@font/roboto"
                android:text="@string/group_details_desc_title"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/group_details_desc_text_box"
                android:layout_width="225dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto"
                android:text="@string/group_details_desc_default"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/group_details_desc_title"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_details_desc_text_box" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/group_details_map_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/svg_map_primary"
            android:fontFamily="@font/roboto"
            android:text="@string/group_details_map_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_details_content_table" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/group_details_map_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_details_map_title" />

        <TextView
            android:id="@+id/group_details_map_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/svg_person_black"
            android:fontFamily="@font/roboto"
            android:text="@string/group_details_members_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_details_map_view" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="375dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_details_map_title2">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/group_details_user_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>